70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/b75da809-79ed-4c06-8db6-9df096b89f79/RentedMachine/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-2f06784f-c6b6-4778-90a2-8fa5124eef88
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: rest-app-2f06784f-c6b6-4778-90a2-8fa5124eef88
spec:
  selector:
    app: rest-app-2f06784f-c6b6-4778-90a2-8fa5124eef88
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
