70114ee3-7c51-40a6-af98-bd2ca53150ad/17cd568b-1349-4670-a8ae-53d47334febc/b75da809-79ed-4c06-8db6-9df096b89f79/RentedMachine/kubernates/rest-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rest-ingress-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
  namespace: 3219e62e-f28c-4e9a-b62e-77aae69fb44b
  labels:
    app: rest-app-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
spec:
  ingressClassName: nginx
  rules:
    - host: app-hzz3e4.o19qgi.us-east-2.febe.k8s
      http:
        paths:
          - path: /febe-rest-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc/
            pathType: Prefix
            backend:
              service:
                name: rest-service-de3d7ca2-c067-4881-8cd4-4688ffd4e1dc
                port:
                  number: 80
